syntax = "proto3";

option go_package ="/hrm";

import "google/protobuf/timestamp.proto";

message Payroll{
    int64 id = 1;
    string employee_id = 2;
    int32 monthly = 3;
    int32 yearly = 4;
    int32 allowance = 5;
    int32 deduction = 6;
    // username
    string create_by = 7;
    google.protobuf.Timestamp created_at = 8;
    // username
    string updated_by = 9;
    google.protobuf.Timestamp updated_at = 10;
}